--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,10 +1,27 @@
 {% for message in messages %}
 <div class="container-fluid p-0">
-    <div class="alert {{ message.tags }} alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">×</span>
-        </button>
+    <div class="alert {{ message.tags }} alert-dismissible" role="alert" id="message_box">
+        <a type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="close_alert()">
+            <span aria-hidden="true">&times;</span>
+        </a>
+        <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="close_alert()">
+        <span aria-hidden="true">&times;</span>
+        </button> -->
         {{ message }}
     </div>
 </div>
 {% endfor %}
+
+
+
+<script>
+    var message_tag = document.getElementById("message_box");
+
+    setTimeout(function () {
+        message_tag.style.display = "none";
+    }, 30000);
+
+    function close_alert() {
+        message_tag.style.display = "none";
+    }
+</script>
